# vmbox

./: .gitmodules  Makefile  README.md  VM-APP-DESIGN.md  VMBOX-TECH-DETAILS.md  build-dngtoolkit-ova.sh  build-image.sh  build.sh  config.sh  packages-dngtoolkit.txt  packages.txt  packages.txt.example  system-packages.txt
apps/hello-world/: CMakeLists.txt  manifest.template.json
apps/hello-world/etc/: config.json.default
apps/hello-world/share/www/: index.html
apps/hello-world/src/: app.py
configs/: hello-web-terminal-package.txt
initramfs/: init
rootfs/etc/init.d/: app-manager  business-app  system-mgmt
rootfs/etc/udev/rules.d/: 99-ftdi-persistent.rules  99-usb-automount.rules
rootfs/opt/app-manager/: app-manager.py
rootfs/opt/business-app/: app.py
rootfs/opt/system-mgmt/: app.py
rootfs/opt/system-mgmt/templates/: index.html  login.html
scripts/: 01-create-alpine-rootfs.sh  03-create-image.sh  04-convert-to-vbox.sh  build-app-partition.sh  chroot-helper.sh  smoke-test.sh
